--- a/03_background/literature_review.tex
+++ b/03_background/literature_review.tex
@@ -46,7 +46,7 @@ Paul Milgram, Herman Colquhon and Fumio Kishino addressed the issue of alternate
 
 %However despite these thorough and well-reasoned definitions being published originally in 1994, much of the subsequent literature studied for this review has adopted conflicting, or at least confusing and misleading, definitions.
 
-One of the overbearing concepts introduced by Milgram et al. is that whilst both purely real and purely virtual environments do exist they should not be considered discrete alternatives but rather poles lying at opposite ends of a linear scale $-$ the \textit{Reality-Virtuality continuum}. The location of an environment along this continuum coincides with its location along a parallel \textit{Extent of World Knowledge continuum} where `world knowledge' refers to the amount of quantitative information that is associated with the content being presented, or in other words how much of the environment is being `modelled' by a computer. These continua are included as figure \ref{reality_virtuality_extent_of_world_knowledge_continuum}.
+One of the overbearing concepts introduced by Milgram et al. is that whilst both purely real and purely virtual environments do exist they should not be considered discrete alternatives but rather poles lying at opposite ends of a linear scale that stretches from an entirely real environment at one extreme to an ontologically parallel but entirely virtual environment~\cite{Qvortrup2002} at the other $-$ the \textit{Reality-Virtuality continuum}. The location of an environment along this continuum coincides with its location along a parallel \textit{Extent of World Knowledge continuum} where `world knowledge' refers to the amount of quantitative information that is associated with the content being presented, or in other words how much of the environment is being `modelled' by a computer. These continua are included as figure \ref{reality_virtuality_extent_of_world_knowledge_continuum}.
 
 \begin{figure}[h]
 \centering
@@ -108,15 +108,22 @@ Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reali
 \begin{minipage}{.5\textwidth}
   \centering
   \includegraphics[width=0.95\linewidth]{Mann_venn_original.png}
-  \caption{Original Mann venn diagram.}
+  \caption{Original Mann Venn diagram.}
   \label{Mann_venn_original.png}
 \end{minipage}%
 \begin{minipage}{.5\textwidth}
   \centering
   \includegraphics[width=0.95\linewidth]{Mann_venn_mod_1.png}
-    \caption{Modified Mann venn diagram.}
+    \caption{Modified Mann Venn diagram.}
     \label{Mann_venn_mod_1.png}
 \end{minipage}
+
+\vspace{5mm}
+
+\centering
+  \includegraphics[width=0.5\linewidth]{Mann_venn_mod_3.png}
+  \caption{Further modified Mann Venn diagram.}
+  \label{Mann_venn_mod_3.png}
 \end{figure}
 
 Visualising the position of the `basic' classes of reality \& virtual reality using this same method requires more drastic alteration to the Venn diagram, but is diagnostic in further revealing the relationships between the terms introduced within Want's literature. The further modified Venn diagram (figure \ref{Mann_venn_mod_3.png}) shows;
@@ -128,17 +135,12 @@ Visualising the position of the `basic' classes of reality \& virtual reality us
 	\item that augmented reality \& augmented virtuality can feature in modulated reality systems.
 \end{itemize}
 
-\begin{figure}[h]
-\centering
-  \includegraphics[width=0.5\linewidth]{Mann_venn_mod_3.png}
-  \caption{Further modified Mann venn diagram.}
-  \label{Mann_venn_mod_3.png}
-\end{figure}
-
 This final iteration of the Venn diagram still contains ambiguity, however it is more diagnostic for categorising the majority of alternate reality systems than the previous two diagrams, whilst also avoiding over-complication. There are two ambiguities to recognise. First, this diagram maintains from the original diagram positions in which a system can exist that is both mixed \& modulated, but which is neither augmented reality nor augmented virtuality. Second, this diagram does not accommodate a purely virtual environment that is then modulated: whether such a system would ever be created is arguable though, as any modulation that could be performed by modulators external to the virtual environment software could be better performed by the software itself.
 
 %=========================================================================================================
 %=========================================================================================================
+
+\clearpage
 
 \subsection{Summary of Alternate Realities Definitions}
 \label{summaryofalternaterealitydefinitions}
@@ -167,7 +169,7 @@ This final iteration of the Venn diagram still contains ambiguity, however it is
 		
 %=========================================================================================================
 		
-\textbf{Virtual Reality} & The polar opposite of \textit{reality}, an environment that consists solely of virtual objects, with computer-based quantitative information associated with all of them and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer.~\cite{Milgram1994, Milgram1999, Want2009}
+\textbf{Virtual Reality (VR)} & The polar opposite of \textit{reality}, an environment that consists solely of virtual objects, with computer-based quantitative information associated with all of them and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer.~\cite{Milgram1994, Milgram1999, Want2009}
 
 While traditional definitions of \textit{virtual reality} require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (eg by using Head Mounted Displays \& body tracking techniques to remove logical anchors to the real world~\cite{Druck2006}) the criteria adopted herein are less drastic, classifying the virtual environments presented by video games viewed via 2D monitors as rudimentary implementations of virtual reality; they are completely modelled environments that exist entirely separate to the real world. \\
 		
@@ -175,13 +177,13 @@ While traditional definitions of \textit{virtual reality} require the environmen
 		
 %=========================================================================================================
 
-\textbf{Mixed Reality} & The broad range of environments that arise from the merging of real and virtual environments to some extent such that the result is neither entirely real nor entirely virtual, where real and virtual objects co-exist. Both \textit{augmented reality} and \textit{augmented virtuality} are included under the broader classification of \textit{mixed reality}. \\
+\textbf{Mixed Reality (MR)} & The broad range of environments that arise from the merging of real and virtual environments to some extent such that the result is neither entirely real nor entirely virtual, where real and virtual objects co-exist. Both \textit{augmented reality} and \textit{augmented virtuality} are included under the broader classification of \textit{mixed reality}. \\
 
 \hline
 		
 %=========================================================================================================
 
-\textbf{Augmented Reality} & A mixed reality environment comprising a real environment has had virtual objects added to or overlain upon it. A common approach for achieving this addition/overlay is superimposing virtual objects over a direct or indirect view of the real environment using Head Mounted Displays \&/or cameras~\cite{Krevelen2010}. \\
+\textbf{Augmented Reality (AR)} & A mixed reality environment comprising a real environment has had virtual objects added to or overlain upon it. A common approach for achieving this addition/overlay is superimposing virtual objects over a direct or indirect view of the real environment using Head Mounted Displays \&/or cameras~\cite{Krevelen2010}. \\
 
 	%A commercial example of \textit{augmented reality} is the Layar browser for mobile phones, which overlays various forms of data onto the view captured by a phone's camera after determining its location and orientation using GPS, accelerometer and magnetometer readings~\cite{eishita:layar}
 
@@ -191,7 +193,7 @@ While traditional definitions of \textit{virtual reality} require the environmen
 
 %=========================================================================================================
 
-\textbf{Augmented Virtuality} & A virtual environment upon which sampled real objects are overlain, perhaps through the use of cameras~\cite{caballero:behand}. \\
+\textbf{Augmented Virtuality (AV)} & A virtual environment upon which sampled real objects are overlain, perhaps through the use of cameras~\cite{caballero:behand}. \\
 
 %A simple commercial example of augmented virtuality is the EyeToy accessory and associated software for Sony's Playstation 2 games console (and later the Playstation Eye for the Playstation 3), a digital camera that captures images of players and their surroundings and integrates them into the gaming experience presented on the screen.
 
@@ -288,25 +290,23 @@ PolySocial Reality (PoSR) describes situations in which people multiplex their p
 
 \section{Cross Reality}
 
-Cross reality is the ubiquitous mixed reality situation that arises from the fusion of real-world sensor/actuator infrastructure with virtual environments, such that augmented reality and augmented virtuality manifest simultaneously and facilitate synchronous bidirectional exchange of media and control information between real and virtual environments. Sensors collect and tunnel dense real-world data into virtual environments where they are interpreted and displayed to dispersed users, whilst interaction of virtual participants simultaneously incarnates into the real world through a plenitude of diverse displays and actuators~\cite{Paradiso2009}.
+Cross Reality (XR) is the ubiquitous mixed reality situation that arises from the fusion of real-world sensor/actuator infrastructure with virtual environments, such that augmented reality and augmented virtuality manifest simultaneously and facilitate synchronous bidirectional exchange of media and control information between real and virtual environments. Sensors collect and tunnel dense real-world data into virtual environments where they are interpreted and displayed to dispersed users, whilst interaction of virtual participants simultaneously incarnates into the real world through a plenitude of diverse displays and actuators~\cite{Paradiso2009}.
 
-The principle features that distinguish cross reality from the other alternate realities covered in section \ref{summaryofalternaterealitydefinitions} are;
+The principle features that distinguish XR from the other alternate realities covered in section \ref{summaryofalternaterealitydefinitions} are;
 \begin{enumerate}
 	\item a shift from single- to bi-directional information flow between real and virtual environments~\cite{kim:practical}
 	\item that both environments are complete unto themselves (but are enriched by their ability to mutually reflect, influence and merge into one another).~\cite{lifton:merging}
 \end{enumerate}
 
-One motivation behind this early Cross Reality work was what Lifton dubbed `the vacancy problem';
+%This thesis presents systems that focus on the second aspect above \& extends it by permitting both environments to be experienced at any time \& position.
+
+XR was realised \& developed as a research area by the Responsive Environments Group at MIT's Media Lab, centred around the research of Joshua Lifton~\cite{Lifton2007a} in combining the Plug sensor/actuator platform~\cite{Lifton2007b} with a Second Life hosted virtual model of the physical Lab in the `Shadow Lab' project. One of the driving motivations behind this work was what Lifton dubbed `the vacancy problem'; \textbf{***See HyperReality p35***}
+
 \begin{quote}
 \textit{``the noticeable and profound absence of a person from one world, either real or virtual, while they are participating in the other. Simply put, the vacancy problem arises because people do not currently have the means to be in more than one place (reality) at a time.''}
 \end{quote}
 
-\textbf{See HyperReality p35}
-
-%This thesis presents systems that focus on the second aspect above \& extends it by permitting both environments to be experienced at any time \& position.
-
-\subsection{History}
-Cross reality was realised \& developed as a research area by the Responsive Environments Group at MIT's Media Lab, centred around the research of Joshua Lifton~\cite{Lifton2007a} in combining the Plug sensor/actuator platform~\cite{Lifton2007b} with a Second Life hosted virtual model of the physical Lab in the `Shadow Lab' project. These projects furthered initial work by the IBM Virtual Universe Community~\cite{Hughes2006, Hughes2006a,Hughes2006b}, whose progress toward a cross reality platform was confirmed via personal correspondence;
+These XR projects at the Media Lab furthered initial work by the IBM Virtual Universe Community~\cite{Hughes2006, Hughes2006a,Hughes2006b}, described in personal correspondence by Ian Hughes;
 
 \begin{quote}
 \textit{``The control mechanisms worked two ways generally. There was a physical lab that had devices that were controlled by a pub/sub mechanism based on the light weight protocol MQTT. Those devices subscribed to various messages. So initially web pages controlled them \ldots\ Equally the objects generated messages when they were physically switched on and off. As SL had an RPC interface it was possible \ldots\ to subscribe to the same messages and send requests into SL to change states of object \ldots\ So there were lights, blinds, proximity detectors and even the tilt sensors on the laptops that were instrumented with these messages.''}
@@ -314,24 +314,27 @@ Cross reality was realised \& developed as a research area by the Responsive Env
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=\textwidth]{lifton_shadow_lab.png}
-\caption{Side view of the Shadow Lab platform, showing a reconstruction of part of the Media Lab, virtual `data ponds' where Plug sensor/actuator devices were place \& a human-sized avatar.}
-\label{lifton_shadow_lab.png}
+\begin{minipage}{.5\textwidth}
+  \centering
+  \includegraphics[width=0.95\linewidth]{lifton_shadow_lab.png}
+  \caption{Side view of the virtual Shadow Lab.}
+  \label{lifton_shadow_lab.png}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+  \centering
+  \includegraphics[width=0.95\linewidth]{ubiquitous_sensor_portal.jpg}
+    \caption{A Ubiquitous Sensor Portal.}
+    \label{ubiquitous_sensor_portal.jpg}
+\end{minipage}
 \end{figure}
 
-The Shadow Lab project did not allow for tandem visual engagement with both constituent environments of the cross reality platform. This was addressed in part by the following Ubiquitous Sensor Portal project, which situated 45 I/O rich `portals', shown in figure \ref{ubiquitous_sensor_portal.jpg}, throughout the Media Lab, each with a corresponding extension in Second Life. However in stark contrast to the Dual Reality Lab, the virtual portals were not situated in a simulation of the real Media Lab in situations corresponding to their physical location, but instead used a more abstract virtual representation with a geometric layout; this design, shown in figure \ref{ubiquitous_sensor_portal_virtual.png}, reflected intellectual affiliation as opposed to real-world location.
-
-\begin{figure}[h]
-\centering
-\includegraphics[width=0.6\textwidth]{ubiquitous_sensor_portal.jpg}
-\caption{A Ubiquitous Sensor Portal.}
-\label{ubiquitous_sensor_portal.jpg}
-\end{figure}
+The Shadow Lab project did not allow for tandem visual engagement with both constituent environments of the cross reality platform, focussing instead on the interplay of sensor data \& actuator commands exchanged between the environments. The visual aspect was addressed in part by the subsequent Ubiquitous Sensor Portal project, which situated 45 I/O rich `portals' (figure \ref{ubiquitous_sensor_portal.jpg}) throughout the Lab, each with a corresponding extension in Second Life. However in stark contrast to the Dual Reality Lab, the virtual portals were not situated in a simulation of the real Media Lab in situations corresponding to their physical location, but instead used a more abstract virtual representation with a geometric layout reflecting intellectual affiliation as opposed to real-world location.
 
 %=========================================================================================================
 
-\subsection{Position}
-Lifton's use of alternate reality terminology~\cite{Lifton2007a} does not reach the conclusion that mixed reality is a broad term that encompasses both augmented reality \& augmented virtuality $-$ in fact, he doesn't mention augmented virtuality even though his Cross Reality systems arguably cause it to manifest. The diagram that he presents (figure \ref{original_lifton_axis.png}) \& alludes to Milgram's continua places mixed reality as a separate classification of alternate reality between augmented reality \& virtual reality, even though his discussion of mixed reality hints that it logically encompasses augmented reality. Figure \ref{modified_lifton_axis.png} shows Lifton's diagram updated to show the definitions adopted in section \ref{summaryofalternaterealitydefinitions}.
+\subsection{Alternate Reality Definitions from Cross Reality}
+
+Lifton's use of alternate reality terminology~\cite{Lifton2007a} does not conclude that MR is a broad term encompassing both AR \& AV $-$ in fact, AV is not mentioned at all, even though the XR systems presented arguably cause it to manifest. The diagram presented (figure \ref{original_lifton_axis.png}) alludes to Milgram's continua but places MR as a separate classification of alternate reality between AR \& VR, even though the discussion hints that it logically encompasses AR. Figure \ref{modified_lifton_axis.png} is the result of modifying this diagram to match the definitions in section \ref{summaryofalternaterealitydefinitions}.
 
 \begin{figure}[h]
 	\centering
@@ -347,19 +350,21 @@ Lifton's use of alternate reality terminology~\cite{Lifton2007a} does not reach 
 	\label{modified_lifton_axis.png}
 \end{figure}
 
-Lifton does however explain that while such a taxonomy can be successfully applied to most alternate reality efforts, it does not well address the concept of cross reality where there are two complete realities, one real and one virtual. \textbf{***is there a direct citation for this?***}
+Lifton does however explain that while such a taxonomy can be successfully applied to most alternate reality efforts, it does not well address those that feature two complete realities, one real \& one virtual, which is one of the defining \& distinguishing characteristics of a XR system. \textbf{***is there a direct citation for this?***}
 
 %=========================================================================================================
 
-\subsection{Cross Reality \& Milgram \& Kishino's Reality-Virtuality Continuum}
+\subsection{Position of Cross Reality}
 
-The position of XR in relation to other alternate realities studied by Computer Science can be visualised using Milgram \& Kishino's \textit{virtuality continuum} that stretches from an entirely real environment at one extreme to an ontologically parallel but entirely virtual environment~\cite{Qvortrup2002} at the other. The explanation herein distinguishes between environments themselves (depicted in figures \ref{virtuality-continuum-augmented-reality} to \ref{virtuality-continuum-cross-reality-3} by solid ellipses) \& where the stimuli that the user is perceiving originate from (depicted by dashed ellipses).
+The position of XR in relation to other alternate realities can be visualised using Milgram \& Kishino's virtuality continuum. As one of the defining characteristics of a XR system is that it features two environments, both complete unto themselves, the explanation herein distinguishes between environments themselves (depicted in figures \ref{virtuality-continuum-augmented-reality} to \ref{virtuality-continuum-cross-reality-3} by solid ellipses) \& where the stimuli that the user is perceiving originate from (depicted by dashed ellipses).
 
 %Ontology - The core meaning within computer science is a model for describing the world that consists of a set of types, properties, and relationship types. There is also generally an expectation that the features of the model in an ontology should closely resemble the real world (related to the object).
 
-Of particular importance is to appreciate the distinction between a XR system \& an \textit{augmented reality} (AR) system, as both concepts involve user engagement with both real \& virtual content. Whilst an AR system features a single environment, comprised of the user's RW overlain by some virtual content, with the user perceiving stimuli from this single augmented environment (figure \ref{virtuality-continuum-augmented-reality}), a XR system instead features two discrete environments, one real \& the other virtual, each complete unto itself (figure \ref{virtuality-continuum-cross-reality-1}).
+Of particular importance is to appreciate the distinction between a XR system \& an AR system, as both concepts involve user engagement with both real \& virtual content. Whilst an AR system features a single environment, comprised of the user's RW overlain by some virtual content, with the user perceiving stimuli from this single augmented environment (figure \ref{virtuality-continuum-augmented-reality}), a XR system instead features two discrete environments, one real \& the other virtual, each complete unto itself (figure \ref{virtuality-continuum-cross-reality-1}).
 
 Whilst AR falls within the realms of Mixed Reality (MR), a XR system can be considered as occupying the two extremes of the continuum outwith the MR region. However, XR systems that allow simultaneous interaction with both of their constituent environments blur this definition; using a XR platform such as that discussed in this document, a user can transition between perceiving stimuli from each of these environments (figures \ref{virtuality-continuum-cross-reality-2} \& \ref{virtuality-continuum-cross-reality-3}) in a manner that allows them to engage with each environment without becoming wholly vacant from the other.
+
+\textbf{***This is also true of AV, but AV is not as commonly seen a paradigm (yet)***}
 
 \begin{figure}[h]
 	\begin{center}
@@ -378,6 +383,8 @@ Whilst AR falls within the realms of Mixed Reality (MR), a XR system can be cons
 \end{figure}
 
 \textbf{Is it worth pointing out on the diagram that a true XR system would have a constant bi-directional stream of data between the two environments? And that without this, we have something like parallel reality?}
+
+\textbf{Combined 3.13 \& 3.14 with 3.15 to properly show stuff.}
 
 \begin{figure}[h]
 	\begin{center}
